# mcp_flipkart

./: .dockerignore  .gitignore  Dockerfile  README.md  build.sh  docker-compose.yml  main.py  pyproject.toml  run.sh  smithery.yaml
flipkart-scraper-api/: Dockerfile
src/flipkart_mcp/: __init__.py  config.py  prompts.py  resources.py  server.py  tools.py
